[package]
name = "binsig"
version = "0.1.0"
authors = ["Mason Reed <msr@emesare.com>"]
edition = "2021"
readme = "README.md"
keywords = ["binary", "signature", "scan", "binsig"]
description = "Provides an easy way to deal with searching for byte patterns using partial byte signatures"
repository = "https://github.com/emesare/binsig/"
license = "MIT"

[dependencies]
itertools = "0.11"
thiserror = "1.0"
